melhorias e mais alguns comandos